# word_chain_bot_indently

./: .gitignore  .isort.cfg  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  Terms of Service.md  alembic.ini  character_frequency.py  config.ini  consts.py  data.py  decorator.py  dictionary_check.py  karma_calcs.py  language.py  main.py  model.py  multi_language_feature_roadmap.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  utils.py  wortschatz.py
alembic/: env.py
alembic/versions/: 8aa564d9e627_singular_names.py  d060a8ef2794_init.py
alembic_revisions/: README.md  env.py
alembic_revisions/versions/: 0a25d147de45_sql_native_types.py  20d8d765f2f9_used_words_fix.py  364e8b6e33f8_server_config_model.py  3c0da61070c4_multi_language.py  54a9a6fc599f_wal_mode.py  90213445d026_hard_mode.py  b9bee291a668_rename_high_score_emoji_flag.py  c550db91be30_ban_system.py  c62c307d3191_serbian_to_serbo_croatian.py
cogs/: admin_cmds.py  common.py  game.py  manager_cmds.py  user_cmds.py
views/: dropdown.py
