[tool.poetry]
name = "word-chain-bot-indently"
version = "6.0.0"
description = "Word Chain Discord bot, born from the Indently Discord server!"
authors = ["Wrichik Basu <56736644+WrichikBasu@users.noreply.github.com>",
           "Sir Lefti <62506842+SirLefti@users.noreply.github.com"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.5.0"
python-dotenv = "^1.1.0"
requests-futures = "^1.0.2"
pydantic = "^2.11.4"
SQLAlchemy = "^2.0.36"
aiosqlite = "^0.21.0"
alembic = "^1.15.2"
uuid6 = "^2024.7.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
